--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -41,7 +41,7 @@
 	    				<li class="dropdown">
 	    					<a id="userLinksLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> <span class="visible-xs-inline">{% if user.userprofile.display_name %}{{ user.userprofile.display_name }}{% else %}{{ user }}{% endif %}</span> <span class="caret"></span></a>
 	    					<ul class="dropdown-menu" aria-labelledby="userLinksLabel">
-	    						<li><a href="{% url 'user_overview' user.username %}">Your Content</a></li>
+	    						<li><a href="{% url 'user_overview' %}">Your Submissions</a></li>
 	    						<li><a href="{% url 'user_profile' %}">Edit Profile</a></li>
 							    {% if user.is_staff %}
 								<li><a href="/admin/">Go to Admin Site</a></li>
