--- a/templates/map/ugc_thanks.html
+++ b/templates/map/ugc_thanks.html
@@ -11,7 +11,7 @@
 				<p class="text-center">Your content will be added to the map shortly</p>
 				<p class="text-center">
 					<a href="{% url 'detail' feature.id %}" class="btn btn-default btn-lg">Return to {{ feature }}</a> 
-					<a href="{% url 'user_overview' user.username %}" class="btn btn-default btn-lg">See All Your Content</a>
+					<a href="{% url 'user_overview' %}" class="btn btn-default btn-lg">See All Your Content</a>
 				</p>
 			</div>
 		</div>
