--- a/templates/map/search_map.html
+++ b/templates/map/search_map.html
@@ -7,7 +7,7 @@
 			
 			var title_box_title = 'Showing Results for &ldquo;{{ query }}&rdquo;';
 
-			loadFeatures(jsonUrl, 'main');
+			loadFeatures(jsonUrl, 'main', false);
 
 		</script>
 
