--- a/templates/map/index.html
+++ b/templates/map/index.html
@@ -7,7 +7,7 @@
 
 		<script>
 			var jsonUrl = '{% url "features" %}';
-			loadFeatures(jsonUrl, 'main');
+			loadFeatures(jsonUrl, 'main', 'index', true);
 		</script>
 
 {% endblock %}
