--- a/templates/map/tag.html
+++ b/templates/map/tag.html
@@ -6,7 +6,7 @@
 			var title_box_title = 'All places tagged "{{ tag }}"';
 
 			var jsonUrl = '{% url "features_by_tag" tag %}';
-			loadFeatures(jsonUrl, 'main');
+			loadFeatures(jsonUrl, 'main', false);
 		</script>
 
 {% endblock %}
