changes to settings modules, added a backup script (quite basic for the mo)

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-Everything went wrong
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 col-md-8 col-md-offset-2 content">
+			<h1>Oh Noes!</h1>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
