fixed address hover bug

--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2 content">
-			<h1>Oh Noes!</h1>
+			<h1>Oh Noes - Error 404!</h1>
+			<p>It borked.</p>
 		</div>
 	</div>
 </div>
