--- a/templates/map/add_document.html
+++ b/templates/map/add_document.html
@@ -7,7 +7,7 @@
 		<div class="col-md-2">
 		</div>
 		<div class="col-xs-12 col-md-7">
-			<h1>Add Content About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h1>
+			<h1>Add Memories or Research About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h1>
 			<hr />
 		</div>
 	</div>
@@ -33,10 +33,10 @@
 {% endblock %}
 
 {% block footer %}
-<footer class="footer navbar-fixed-bottom editor-help">
+<!--<footer class="footer navbar-fixed-bottom editor-help">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-md-8 col-md-offset-2">
+			<div class="col-xs-12 col-md-4">
 				<h3 class="text-muted">Formatting Help</h3>
 				<p class="text-muted">Highlight text to show formatting toolbar.<br />
 				A footnote reference looks like this:[^1]<br />
@@ -44,5 +44,5 @@
 			</div>
 		</div>
 	</div>
-</footer>
+</footer>-->
 {% endblock %}
