--- a/templates/map/add_image.html
+++ b/templates/map/add_image.html
@@ -33,7 +33,7 @@
 {% endblock %}
 
 {% block footer %}
-<footer class="footer navbar-fixed-bottom editor-help">
+<!--<footer class="footer navbar-fixed-bottom editor-help">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -41,5 +41,5 @@
 			</div>
 		</div>
 	</div>
-</footer>
+</footer>-->
 {% endblock %}
