--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -82,7 +82,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12">
-						<h4>The Survey of London Whitechapel Initiative is Supported by</h4>
+						<p>The Survey of London Whitechapel Initiative is Supported by the Arts and Humanities Research Council and is based at University College London.</p>
 						<img src="{% static 'img/RGB-Portrait.gif' %}" alt="Arts and Humanities Research Council Logo" style="width: 100px;">
 					</div>
 				</div>
