--- a/templates/map/add_media.html
+++ b/templates/map/add_media.html
@@ -7,7 +7,7 @@
 		<div class="col-md-2">
 		</div>
 		<div class="col-xs-12 col-md-7">
-			<h1>Add Media About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h1>
+			<h1>Add Video or Audio About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h1>
 			<hr />
 		</div>
 	</div>
@@ -33,7 +33,7 @@
 {% endblock %}
 
 {% block footer %}
-<footer class="footer navbar-fixed-bottom editor-help">
+<!--<footer class="footer navbar-fixed-bottom editor-help">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -41,5 +41,5 @@
 			</div>
 		</div>
 	</div>
-</footer>
+</footer>-->
 {% endblock %}
