--- a/templates/map/feature.html
+++ b/templates/map/feature.html
@@ -6,25 +6,25 @@
 		<a href="{% url 'detail' feature.id %}"><img src="{% thumbnail feature.thumbnail 300x170 crop='0,0' %}"></a>
 	{% endif %}
 
-	{% if feature.b_name %}
-		<p><span class="small"><a href="{% url 'detail' feature.id %}">{{ feature.b_name }}</a></span><br />
-		{% else %}
-		<p><span class="small"><a href="{% url 'detail' feature.id %}">{{ feature.address }}</a></span><br />
-	{% endif %}
-	
-		{% if documents %}<a href="{% url 'detail' feature.id %}"><span class="glyphicon glyphicon-file"></span></a> {% endif %}{% if images %}<a href="{% url 'detail' feature.id %}#images"><span class="glyphicon glyphicon-picture"></span></a> {% endif %}{% if stories %}<span class="glyphicon glyphicon-comment"></span> {% endif %}{% if media %}<a href="{% url 'detail' feature.id %}#media"><span class="glyphicon glyphicon-play"></span> {% endif %}
-		<span class="pull-right">{% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a> {% endif %}<a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?feature={{ feature.id }}{% endif %}" class="btn btn-default btn-sm">Add Content</a> </span></p>
-	
-	<script>
-		$('.close-this').click(function() {
-			$('.infobox-control').hide();
-			resetColours(buildings);
-		});
-		
-		$('.category_btn').click(function(e) {
-			e.preventDefault();
-			var jsonUrl = $(this).attr('href');
-			loadFeatures(jsonUrl);
-		})
-	</script>
+	<div class="feature-overview-footer">
+		{% if feature.b_name %}
+			<p><span class="small"><a href="{% url 'detail' feature.id %}">{{ feature.b_name }}</a></span><br /></p>
+			{% else %}
+			<p><span class="small"><a href="{% url 'detail' feature.id %}">{{ feature.address }}</a></span><br /></p>
+		{% endif %}
+
+			<div class="btn-group">{% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a> {% endif %}<a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?feature={{ feature.id }}{% endif %}" class="btn btn-default btn-sm">Add Content</a> <a href="{% url 'detail' feature.id %}" class="btn btn-default btn-sm">Read More</a> </div>
+	</div>
+		<script>
+			$('.close-this').click(function() {
+				$('.infobox-control').hide();
+				resetColours(buildings);
+			});
+			
+			$('.category_btn').click(function(e) {
+				e.preventDefault();
+				var jsonUrl = $(this).attr('href');
+				loadFeatures(jsonUrl);
+			})
+		</script>
 </div>
