--- a/templates/map/index.html
+++ b/templates/map/index.html
@@ -1,9 +1,32 @@
 {% extends 'map/base.html' %}
 {% block content %}
 		<div id="map" class="map-large"></div>
+		
+		<div class="modal fade" id="helpbox" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<!--<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		    		</div>-->
+					<div class="modal-body">
+		        		<h1>Welcome!</h1>
+		        		<p>Click on a building to find out more about its history.</p>
+		        		<p>Coloured buildings are ones that we have information about; outlines are ones that we don't. If you have images, media, information, or memories about a place, you can contribute them to the map using the 'Add Content' button.</p>
+		      		</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		    		</div>
+		    	</div>
+			</div>
+		</div>
+
 		<script>
+			var title_box_title = 'Showing all places'
 			var jsonUrl = '{% url "features" %}';
 			loadFeatures(jsonUrl, 'main', 'index', true);
+			{% if first_visit == False %}
+				$('#helpbox').modal('show');
+			{% endif %}
 		</script>
 
 {% endblock %}
