--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -15,7 +15,7 @@
           <h3>Contribute to Survey of London Whitechapel</h3>
           <hr>
           <p>This website is a collaboration between the Survey of London and you, the reading public.</p>
-          <p>To start contributing, sign in with your existing social media account, or <a href="{{ signup_url }}">sign up here</a>.</p>
+          <p>To start contributing your memories, research, images or media about Whitechapel's buildings and history, sign in with your existing social media account, or <a href="{{ signup_url }}">sign up here</a>.</p>
           </div>
         <div class="col-xs-12 col-md-5">
         <h3>Sign In</h3>
