--- a/templates/map/search_map.html
+++ b/templates/map/search_map.html
@@ -5,7 +5,7 @@
 			
 			var jsonUrl = '{% url "search_features" %}' + '?q=' + '{{ query }}';
 			
-			var title_box_title = 'Showing Results for &ldquo;{{ query }}&rdquo;';
+			var title_box_title = 'Showing results for &ldquo;{{ query }}&rdquo;';
 
 			loadFeatures(jsonUrl, 'main', false);
 
