--- a/templates/map/ugc_choice.html
+++ b/templates/map/ugc_choice.html
@@ -10,7 +10,7 @@
 				<br />
 				<p class="text-center">
 					<a href="{% url 'add_image' feature.id %}" class="btn btn-default btn-lg">An Image</a> 
-					<a href="{% url 'add_document' feature.id %}" class="btn btn-default btn-lg">Words</a> 
+					<a href="{% url 'add_document' feature.id %}" class="btn btn-default btn-lg">Memories or Research</a> 
 					<a href="{% url 'add_media' feature.id %}" class="btn btn-default btn-lg">Audio or Video</a> 
 				</p>
 			</div>
