--- a/templates/map/user_overview.html
+++ b/templates/map/user_overview.html
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2 content">
 			{% if request.user = user %}
-				<h1>Your Submissions</h1>
+				<h1>Your Contributions</h1>
 				<ul class="nav nav-tabs" role="tablist" id="contentTabs">
 					<li role="presentation" class="active"><a href="#drafts" aria-controls="drafts" role="tab" data-toggle="tab">Drafts</a></li>
 					<li role="presentation"><a href="#pending" aria-controls="pending" role="tab" data-toggle="tab">Pending</a></li>
