--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -6,19 +6,26 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<div class="login-page-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-4 col-md-offset-4 login-dialogue">
+                <h1>{% trans "Password Reset" %}</h1>
+                {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+                <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                    {% csrf_token %}
+                    {% load crispy_forms_tags %}
+                    {{ form|crispy  }}
+                    <input type="submit" class="btn btn-default" value="{% trans 'Reset My Password' %}" />
+                </form>
+                <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
