--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -22,12 +22,15 @@
 		<script src="{% static 'js/medium-editor/medium-editor.js' %}"></script>
 		<link rel="stylesheet" href="{% static 'css/medium-editor/medium-editor.css' %}">
 		<link rel="stylesheet" href="{% static 'css/medium-editor/themes/default.css' %}">
+		<!-- Select2 (for tag autocomplete) -->
+		<link href="{% static 'js/select2/css/select2.min.css' %}" rel="stylesheet" />
+		<script src="{% static 'js/select2/js/select2.min.js' %}"></script>
 	</head>
 	<body data-spy="scroll" data-target="#fixed-nav">
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 			    <div class="navbar-header navbar-left">
-      				<a class="navbar-brand" href="/">Survey of London</a>
+      				<a class="navbar-brand" href="/">Survey of London <span class="label label-primary" style="font-family: 'Helvetica', sans-serif;">beta</span></a>
       				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
 				        <span class="sr-only">Toggle navigation</span>
 				        <span class="icon-bar"></span>
@@ -58,7 +61,7 @@
 				        <div class="form-group">
 				    	    <input type="text" class="form-control search-input" placeholder="Search Places" name="q">
 				        </div>
-				        <button type="submit" class="btn btn-default search">Submit</button>
+				        <button type="submit" class="btn btn-default search">Go</button>
 			      	</form>
 			      	<ul class="nav navbar-nav navbar-right">
 	    				<li><a href="{% url 'site_home' %}">Home</a></li>
@@ -81,9 +84,11 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12">
-						<p>The Survey of London Whitechapel Initiative is Supported by the Arts and Humanities Research Council and is based at University College London.</p>
+					<div class="col-xs-12 col-md-3">
+						<br />
 						<img src="{% static 'img/RGB-Portrait.gif' %}" alt="Arts and Humanities Research Council Logo" style="width: 100px;">
+						<hr />
+						<p>Survey of London Whitechapel is supported by the Arts and Humanities Research Council and is based at University College London.</p>
 					</div>
 				</div>
 			</div>
