--- a/templates/map/category.html
+++ b/templates/map/category.html
@@ -7,7 +7,7 @@
 
 		<script>
 
-			var title_box_title = 'Showing all places in {{ category.name }}';
+			var title_box_title = 'Showing all places in the category "{{ category.name }}"';
 
 			var jsonUrl = '{% url "features_by_category" category.id %}';
 			loadFeatures(jsonUrl, 'main', false);
